[package]
name = "spl-token-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.5.7"
borsh-derive = "1.5.7"
num-derive = "0.4.2"
solana-program = "2.1.22"
spl-associated-token-account = "7.0.0"
spl-token = {version = "8.0.0", features = ["no-entrypoint"]}
thiserror = "2.0.12"

[lib]
crate-type = ["cdylib", "lib"]
